--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
-<!DOCTYPE HTML>
+<!--Programmer: Sachorra Douglas
+Date: 11/2/2024
+Project: Candy Crush Rep-->
+<!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Candy Crush</title>
-    <link rel="stylesheet" href="candy.css">
-    <script src="candy.js"></script>
-</head>
-<body>
-    <h1>Score: <span id="score">0</span></h1> <!-- Added the span element for score -->
-    <div id="board"></div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Candy Crush Rep</title>
+        <link rel="stylesheet" href="candy.css">
+        <script src="candy.js"></script>
+    </head>
+
+    <body>
+        <h1>Score: <span id="score">0</span></h1>
+        <div id="board"></div>
+    </body>
 </html>
